--- a/src/app/panel-why/modules/usuarios/components/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/panel-why/modules/usuarios/components/tabla-usuarios/tabla-usuarios.component.html
@@ -39,33 +39,36 @@
 <div class="row col-12 ps-4">
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por nombre</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <input type="text" matInput [(ngModel)]="filtroNombre" (keydown.enter)="filtrar()">
+    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por apellido</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <input type="text" matInput [(ngModel)]="filtroApellido" (keydown.enter)="filtrar()">
+    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por correo</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <input type="text" matInput [(ngModel)]="filtroCorreo" (keydown.enter)="filtrar()">
+    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar estado</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <mat-select [(value)]="filtroEstado" (selectionChange)="filtrar()">
+      <mat-option></mat-option>
+      <mat-option [value]="true">Activo</mat-option>
+      <mat-option [value]="false">Inactivo</mat-option>
+    </mat-select>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por teléfono</mat-label>
-    <input type="text" matInput>
+    <input type="number" matInput [(ngModel)]="filtroTelefono" (keydown.enter)="filtrar()">
     <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por ciudad</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <input type="text" matInput [(ngModel)]="filtroCiudad" (keydown.enter)="filtrar()">
+    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
 </div>
 <div class="float-end row">
