--- a/src/app/panel-why/modules/pagos-admin/tabla-pagos-admin/tabla-pagos-admin.component.html
+++ b/src/app/panel-why/modules/pagos-admin/tabla-pagos-admin/tabla-pagos-admin.component.html
@@ -33,28 +33,30 @@
 <div class="row col-12 ps-4">
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por correo</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <input type="text" matInput [(ngModel)]="filtroCorreo" (keydown.enter)="filtrar()">
+    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por ciudad</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <input type="text" matInput [(ngModel)]="filtroCiudad" (keydown.enter)="filtrar()">
+    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por cuenta</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <input type="text" matInput [(ngModel)]="filtroCuenta" (keydown.enter)="filtrar()">
+    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por forma de pago</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <mat-select [(value)]="filtroFormaPago" (selectionChange)="filtrar()">
+      <mat-option></mat-option>
+      <mat-option *ngFor="let pago of pagos" [value]="pago.description">{{pago.description}}</mat-option>
+    </mat-select>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por tipo</mat-label>
-    <input type="text" matInput>
-    <mat-icon matSuffix><i class="fi-rr-search"></i></mat-icon>
+    <input type="text" matInput [(ngModel)]="filtroTipoPago" (keydown.enter)="filtrar()">
+    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
 </div>
 <div class="float-end row">
