Gestion mi usuario

--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
@@ -46,7 +46,7 @@
           </mat-tree-node>
         </mat-tree>        
 
-        <a mat-list-item (click)="perfil()" routerLinkActive="activo">
+        <a mat-list-item (click)="miUsuario()" routerLinkActive="activo">
           <mat-icon matPrefix><i class="fi-rr-user"></i></mat-icon>
           Mi Usuario
         </a>
