--- a/src/app/panel-why/modules/parametros/decisores/components/detalle-decisor/detalle-decisor.component.html
+++ b/src/app/panel-why/modules/parametros/decisores/components/detalle-decisor/detalle-decisor.component.html
@@ -21,6 +21,6 @@
     </mat-form-field>
     <div class="btns" *ngIf="datos.edit">
         <button mat-stroked-button class="btn-back" (click)="edit()">Cancelar</button>
-        <button mat-raised-button class="btn-succ" (click)="updateDecisor()">Crear</button>
+        <button mat-raised-button class="btn-succ" (click)="updateDecisor()">Actualizar</button>
     </div>
 </form>
