--- a/src/app/panel-why/modules/parametros/generos/components/detalle-genero/detalle-genero.component.html
+++ b/src/app/panel-why/modules/parametros/generos/components/detalle-genero/detalle-genero.component.html
@@ -30,6 +30,6 @@
     </mat-form-field>
     <div class="btns" *ngIf="datos.edit">
         <button mat-stroked-button class="btn-back" (click)="edit()">Cancelar</button>
-        <button mat-raised-button class="btn-succ" (click)="updateGenero()">Crear</button>
+        <button mat-raised-button class="btn-succ" (click)="updateGenero()">Actualizar</button>
     </div>
 </form>
