--- a/src/app/panel-why/modules/pagos-admin/tabla-pagos-admin/tabla-pagos-admin.component.html
+++ b/src/app/panel-why/modules/pagos-admin/tabla-pagos-admin/tabla-pagos-admin.component.html
@@ -19,7 +19,7 @@
       <mat-label>Descargar plantilla</mat-label>
       <mat-select #plantilla>
         <mat-option>----</mat-option>
-        <mat-option value="https://backend-app-panelwhy-com.camtech.com.co/static/templates/pagos_crear.xlsx">Plantilla Crear Pagos</mat-option>
+        <mat-option value="https://backend-app.panelwhy.com/static/templates/pagos_crear.xlsx">Plantilla Crear Pagos</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
@@ -48,15 +48,16 @@
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por forma de pago</mat-label>
-    <mat-select [(value)]="filtroFormaPago" (selectionChange)="filtrar()">
-      <mat-option></mat-option>
-      <mat-option *ngFor="let pago of pagos" [value]="pago.description">{{pago.description}}</mat-option>
-    </mat-select>
+    <input type="text" matInput [(ngModel)]="filtroFormaPago" (keydown.enter)="filtrar()">
+    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por tipo</mat-label>
-    <input type="text" matInput [(ngModel)]="filtroTipoPago" (keydown.enter)="filtrar()">
-    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
+    <mat-select [(value)]="filtroTipoPago" (selectionChange)="filtrar()">
+      <mat-option>Todos</mat-option>
+      <mat-option value="PG">Pagos</mat-option>
+      <mat-option value="RV">Reversos</mat-option>
+    </mat-select>
   </mat-form-field>
 </div>
 <div class="float-end row">
@@ -142,5 +143,8 @@
       [pageSizeOptions] = "pageSizeOptions"
       >
     </mat-paginator>
+  </div>
+  <div class="descripcion">
+    <span>PG: Pagos, RV: Reversos</span>
   </div>
 </div>
