--- a/src/app/panel-why/modules/parametros/estado-civil/components/detalle-estado-civil/detalle-estado-civil.component.html
+++ b/src/app/panel-why/modules/parametros/estado-civil/components/detalle-estado-civil/detalle-estado-civil.component.html
@@ -21,6 +21,6 @@
     </mat-form-field>
     <div class="btns" *ngIf="datos.edit">
         <button mat-stroked-button class="btn-back" (click)="edit()">Cancelar</button>
-        <button mat-raised-button class="btn-succ" (click)="updateEstadoCivil()">Crear</button>
+        <button mat-raised-button class="btn-succ" (click)="updateEstadoCivil()">Actualizar</button>
     </div>
 </form>
