--- a/src/app/panel-why/modules/parametros/formas-pago/components/detalle-forma-pago/detalle-forma-pago.component.html
+++ b/src/app/panel-why/modules/parametros/formas-pago/components/detalle-forma-pago/detalle-forma-pago.component.html
@@ -21,6 +21,6 @@
     </mat-form-field>
     <div class="btns" *ngIf="datos.edit">
         <button mat-stroked-button class="btn-back" (click)="edit()">Cancelar</button>
-        <button mat-raised-button class="btn-succ" (click)="updateFormaPago()">Crear</button>
+        <button mat-raised-button class="btn-succ" (click)="updateFormaPago()">Actualizar</button>
     </div>
 </form>
