--- a/src/app/panel-why/modules/perfiles/tabla-perfiles/tabla-perfiles.component.html
+++ b/src/app/panel-why/modules/perfiles/tabla-perfiles/tabla-perfiles.component.html
@@ -20,8 +20,8 @@
       <mat-label>Descargar plantilla</mat-label>
       <mat-select #plantilla>
         <mat-option>----</mat-option>
-        <mat-option value="https://backend-app-panelwhy-com.camtech.com.co/static/templates/perfiles_crear.xlsx">Plantilla Crear Perfiles</mat-option>
-        <mat-option value="https://backend-app-panelwhy-com.camtech.com.co/static/templates/perfiles_actualizar.xlsx">Plantilla Actualizar Usuarios</mat-option>
+        <mat-option value="https://backend-app.panelwhy.com/static/templates/perfiles_crear.xlsx">Plantilla Crear Perfiles</mat-option>
+        <mat-option value="https://backend-app.panelwhy.com/static/templates/perfiles_actualizar.xlsx">Plantilla Actualizar Usuarios</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
@@ -45,8 +45,14 @@
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por tipo de usuario</mat-label>
-    <input type="text" matInput [(ngModel)]="filtroTipo" (keydown.enter)="filtrar()">
-    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
+    <mat-select [(value)]="filtroTipo" (selectionChange)="filtrar()">
+      <mat-option>Todos</mat-option>
+      <mat-option value="A">Nuevo</mat-option>
+      <mat-option value="B">Bronce</mat-option>
+      <mat-option value="C">Plata</mat-option>
+      <mat-option value="D">Diamante</mat-option>
+      <mat-option value="E">Oro</mat-option>
+    </mat-select>
   </mat-form-field>
 </div>
 <div class="float-end row">
@@ -97,7 +103,7 @@
 
         <ng-container matColumnDef="ciudad">
           <th mat-header-cell *matHeaderCellDef> Ciudad </th>
-          <td mat-cell *matCellDef="let element"> {{element.GeographyCity.name | uppercase}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.GeographyCity.name}} </td>
         </ng-container>
 
         <ng-container matColumnDef="tipo_usuario">
