--- a/src/app/panel-why/modules/puntos-admin/tabla-puntos-admin/tabla-puntos-admin.component.html
+++ b/src/app/panel-why/modules/puntos-admin/tabla-puntos-admin/tabla-puntos-admin.component.html
@@ -19,7 +19,7 @@
       <mat-label>Descargar plantilla</mat-label>
       <mat-select #plantilla>
         <mat-option>----</mat-option>
-        <mat-option value="https://backend-app-panelwhy-com.camtech.com.co/static/templates/puntos_crear.xlsx">Plantilla Crear Puntos</mat-option>
+        <mat-option value="https://backend-app.panelwhy.com/static/templates/puntos_crear.xlsx">Plantilla Crear Puntos</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
@@ -60,8 +60,11 @@
   </mat-form-field>
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar por tipo</mat-label>
-    <input type="text" matInput [(ngModel)]="filtroTipoPunto" (keydown.enter)="filtrar()">
-    <mat-icon matSuffix (click)="filtrar()"><i class="fi-rr-search"></i></mat-icon>
+    <mat-select [(value)]="filtroTipoPunto" (selectionChange)="filtrar()">
+      <mat-option>Todos</mat-option>
+      <mat-option value="CR">Créditos</mat-option>
+      <mat-option value="RV">Reversos</mat-option>
+    </mat-select>
   </mat-form-field>
 </div>
 <div class="float-end row">
@@ -101,7 +104,7 @@
 
         <ng-container matColumnDef="ciudad">
           <th mat-header-cell *matHeaderCellDef> Ciudad </th>
-          <td mat-cell *matCellDef="let element"> {{element.GeographyCity.name | uppercase}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.GeographyCity.name}} </td>
         </ng-container>
 
         <ng-container matColumnDef="codigo_estudio">
@@ -152,5 +155,8 @@
       [pageSizeOptions] = "pageSizeOptions"
       >
     </mat-paginator>
+  </div>
+  <div class="descripcion  float-end">
+    <span>CR: Créditos, RV: Reversos, RD: Redenciones</span>
   </div>
 </div>
