--- a/src/app/panel-why/modules/usuarios/components/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/panel-why/modules/usuarios/components/tabla-usuarios/tabla-usuarios.component.html
@@ -22,10 +22,10 @@
       <mat-label>Descargar plantilla</mat-label>
       <mat-select #plantilla>
         <mat-option>----</mat-option>
-        <mat-option value="https://backend-app-panelwhy-com.camtech.com.co/static/templates/usuarios_crear.xlsx">Plantilla Crear Usuarios</mat-option>
-        <mat-option value="https://backend-app-panelwhy-com.camtech.com.co/static/templates/usuarios_actualizar.xlsx">Plantilla Actualizar Usuarios</mat-option>
-        <mat-option value="https://backend-app-panelwhy-com.camtech.com.co/static/templates/usuarios_activar.xlsx">Plantilla Activar Usuarios</mat-option>
-        <mat-option value="https://backend-app-panelwhy-com.camtech.com.co/static/templates/usuarios_inactivar.xlsx">Plantilla Inactivar Usuarios</mat-option>
+        <mat-option value="https://backend-app.panelwhy.com/static/templates/usuarios_crear.xlsx">Plantilla Crear Usuarios</mat-option>
+        <mat-option value="https://backend-app.panelwhy.com/static/templates/usuarios_actualizar.xlsx">Plantilla Actualizar Usuarios</mat-option>
+        <mat-option value="https://backend-app.panelwhy.com/static/templates/usuarios_activar.xlsx">Plantilla Activar Usuarios</mat-option>
+        <mat-option value="https://backend-app.panelwhy.com/static/templates/usuarios_inactivar.xlsx">Plantilla Inactivar Usuarios</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
@@ -55,7 +55,7 @@
   <mat-form-field appearance="outline" class="col-2">
     <mat-label>Buscar estado</mat-label>
     <mat-select [(value)]="filtroEstado" (selectionChange)="filtrar()">
-      <mat-option></mat-option>
+      <mat-option>Todos</mat-option>
       <mat-option [value]="true">Activo</mat-option>
       <mat-option [value]="false">Inactivo</mat-option>
     </mat-select>
@@ -99,6 +99,7 @@
                     <button mat-menu-item (click)="detailUser(element.User.id,true)">Editar</button>
                     <button mat-menu-item *ngIf="!element.User.is_active" (click)="statusUserById(element.User.id,'active')">Habilitar</button>
                     <button mat-menu-item *ngIf="element.User.is_active" (click)="statusUserById(element.User.id,'inactive')">Inhabilitar</button>
+                    <button mat-menu-item *ngIf="!element.User.is_active" (click)="mailActivation(element.User.email)">Mail Activación</button>
                   </mat-menu>
                 </td>
               </div>
@@ -132,7 +133,7 @@
   
           <ng-container matColumnDef="ciudad">
             <th mat-header-cell *matHeaderCellDef> Ciudad </th>
-            <td mat-cell *matCellDef="let element"> {{element.GeographyCity.name | uppercase }} </td>
+            <td mat-cell *matCellDef="let element"> {{element.GeographyCity.name}} </td>
         </ng-container>
   
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
