--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
@@ -1,14 +1,22 @@
 <div class="sidenav mt-5">
   <div>
-    <img class="ms-4 img-fluid" src="https://backend-app.panelwhy.com/static/img/default_user.jpg" alt="" height="128px" width="128px"><br>
+    <input type="file" hidden #uploadFile accept="image/jpeg,image/png">
+    <img class="ms-4 img-fluid" src="{{urlPhotgraph}}" alt="" height="128px" width="128px"
+    (mouseover)="imgCamera($event)" (mouseout)="imgCamera($event)" (click)="inputFile()"
+    style="cursor: pointer;">
+    <mat-icon [ngClass]="classPosition"><i [ngClass]="classCamera" (click)="inputFile()"
+      (mouseover)="imgCamera($event)" (mouseout)="imgCamera($event)"></i></mat-icon>
+    <p [ngClass]="classMessage" (click)="inputFile()">{{mensaje}}</p>
+    <br>
     <h2 class=" mt-4 ms-4 text-white">
       <mat-icon matPrefix [ngClass]="{'bronce': categoria=='Bronce',
       'plata': categoria == 'Plata',
       'diamante': categoria == 'Diamante',
-      'oro': categoria == 'Oro'
+      'oro': categoria == 'Oro',
+      'nuevo': categoria == 'Nuevo'
     }"
       [matTooltip]="categoria"><i class="fi-sr-shield-check"></i></mat-icon>
-      {{name | titlecase}}
+      {{name | uppercase}}
     </h2>
     <h3 class="text-white" style="margin-top: -1em; margin-left: 3.5em;">Puntos: {{actual | number}}</h3>
     <h5 style="margin-top: -1.8em; margin-left: 4.8em;">ID: {{codigo}}</h5>
