--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.scss
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.scss
@@ -58,6 +58,26 @@ h5{
     color: rgb(255, 215, 0);
 }
 
+.nuevo{
+    color: #fff;
+}
+
 ::ng-deep mat-tree .mat-icon-button{
     width: auto !important;
+}
+
+.imgPerfil{
+    position: absolute;
+    left: 2.2em;
+    top: 2em;
+    font-size: 3em;
+    color: #aab1b6;
+}
+
+.txt-perfil{
+    position: absolute;
+    left: 8.2em;
+    top: 12em;
+    color: #aab1b6;
+    font-size: .8em;
 }
